--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -123,7 +123,7 @@ back-end.</p>
 <p>During this period, the only (non-documentation) changes that may be
 made are changes that fix bugs or new ports which do not require changes
 to other parts of the compiler.
-New functionality may not be introduced during this period
+New functionality may not be introduced during this period.</p>
 
 <p><strong>Rationale</strong></p>
 
