--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -15,6 +15,10 @@
 
 <ul>
 
+  <li><a href="http://home.in.tum.de/~baueran/thesis/">Compilation of Functional Programming
+  Languages using GCC -- Tail Calls</a> by Andreas Bauer
+  &lt;<a href="mailto:baueran@in.tum.de">baueran@in.tum.de</a>&gt;.</li>
+	
   <li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
   Dunces</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.</li>
 
@@ -33,7 +37,7 @@
   <li><a href="http://www.eskimo.com/~johnnyb/computers/toy/">A Toy
   Example Language</a> by Jonathan Bartlett &lt;<a href="mailto:johnnyb@eskimo.com">johnnyb@eskimo.com</a>&gt;.</li>
 
-  <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.</li>
+  <li><a href="http://www4.in.tum.de/~pizka/">GNU INSEL Compiler gic</a>.</li>
 
   <li><a href="http://www.codesourcery.com/cxx-abi/">
   The V3 multi-vendor standard C++ ABI</a> is used in GCC releases 3.0 and
