Document member function of class template as template friend.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -246,6 +246,16 @@
         for example.  See the ISO C++ Standard Committee's <a
         href="http://anubis.dkuug.dk/jtc1/sc22/wg21/docs/cwg_closed.html#209">defect
         report #209.</a> for details.</li>
+
+    <li>Declaration of member functions of class templates as friends are
+	supported.  For example,
+	<pre>
+	template &lt;typename T&gt; struct A {
+	  void f();
+	};
+	class C {
+	  template &lt;typename T&gt; friend void A&lt;T&gt;::f();
+	};</pre></li>
  
     <li>You must use <code>template &lt;&gt;</code> to introduce template
 	specializations, as required by the standard.  For example,
