Mention new bit-fiddling and Alpha specific built-ins.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -134,6 +134,11 @@
         </pre>
         <p>will not be accepted for C and Objective-C in a future
         version.</p></li>
+    <li>Several
+	<a href="http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other%20Builtins">
+	built-in functions</a> such as <code>__builtin_popcount</code>
+	for counting bits, finding the highest and lowest bit in a
+	word, and parity have been added.</li>
 
   </ul>
 
@@ -344,6 +349,15 @@
   </ul>
 
 <h2>New Targets and Target Specific Improvements</h2>
+
+<h4>Alpha</h4>
+  <ul>
+    <li>Several
+    <a href="http://gcc.gnu.org/onlinedocs/gcc/Alpha-Built-in-Functions.html#Alpha%20Built-in%20Functions">
+    built-in functions</a> have been added such as
+    <code>__builtin_alpha_zap</code> to allow utilizing the more
+    obscure instructions of the CPU.</li>
+  </ul>
 
 <h4>ARM</h4>
   <ul>
