Add anchor for the unsubscribe section.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -167,7 +167,7 @@ web-based e-mail account.</p>
 it's assumed that no-one on these lists means to speak for their company.</p>
 
 
-<h2>Subscribing/unsubscribing</h2>
+<h2 id="subscribe">Subscribing/unsubscribing</h2>
 
 <p>You will be able to subscribe or unsubscribe from any of the GCC mailing
 lists via this form:</p>
