Cleanup for cvs.html.  Move merged/unmaintained branches down and update/"friendlify" some of the comments for current branches.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -164,17 +164,15 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>csl-arm-branch</dt>
   <dd>CodeSourcery branch for developing ARM back end improvements.
-  No check-ins should be made to this branch unless authorized by
-  CodeSourcery personnel.</dd>
+  The branch is maintained by CodeSourcery personnel.  Patches should
+  be marked with the tag <code>[csl-arm-branch]</code> in the subject
+  line.</dd>
 
   <dt>csl-hpux-branch</dt>
-  <dd>CodeSourcery branch for developing hpux improvements.
-  No check-ins should be made to this branch unless authorized by
-  CodeSourcery personnel.</dd>
-
-  <dt>dfa-branch</dt>
-  <dd>This branch contains the insn scheduler with an automaton
-  based pipeline hazard recognizer.</dd>
+  <dd>CodeSourcery branch for developing HP-UX improvements.
+  The branch is maintained by CodeSourcery personnel.  Patches should
+  be marked with the tag <code>[csl-hpux-branch]</code> in the subject
+  line.</dd>
 
   <dt><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></dt>
   <dd>The purpose of this branch is to work on improving GCC's tree
@@ -195,46 +193,16 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>Work on implementing SSA analysis and optimization for trees 
   is done in this branch.</dd>
 
-  <dt>tree-ssa-cfg-branch</dt>
-  <dd>A subbranch of <a
-  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> with the purpose
-  of changing the current tree of statements + cfg code representation
-  to the one based only on cfg.  Later optimizations that could benefit
-  from a simpler cfg manipulation may be developed here.</dd>
-
-  <dt>faster-compiler-branch</dt> 
-  <dd>This branch is for work aimed primarily
-  at making GCC itself run faster.  No checkin policy has yet been
-  established.  See
-  <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
-  thread</a> for discussion of possible work to be done in this
-  area.</dd>
-
-  <dt>gomp-01-branch</dt> 
-  <dd>This is a sub-branch of <a
-  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> used by
-  the <a href="http://savannah.nongnu.org/projects/gomp/">GOMP</a>
-  project to implement <a href="http://www.openmp.org/">OpenMP</a> in GCC. The check-in
-  policies are the same as in the tree-ssa branch:  Patches
-  should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>
-  and marked with <code>[gomp-branch]</code> in the subject.
-  This branch is maintained by <a href="mailto:dnovillo@redhat.com">Diego Novillo
-  &lt;dnovillo@redhat.com&gt;</a>.</dd>
-
   <dt>new-regalloc-branch</dt>
   <dd>Daniel Berlin and Michael Matz are working on an implementation of a 
   graph-coloring register allocator on this branch. It is known to bootstrap 
   under x86-linux and ppc-linux.</dd>
 
-  <dt><a href="projects/cfg.html">cfg-branch</a></dt> 
-  <dd>This branch is created to develop and test infrastructure for
-  easier writing of new RTL based optimizations.  Some new passes
-  (such as superblock formation, loop peeling, web construction,
-  branch combining etc.)  are being implemented there.</dd>
-
-  <dt>rtlopt-branch</dt>
-  <dd>This branch is equivalent to the cfg-branch with the exception that it
-  is based on gcc-pre3.4 tree, instead of gcc-pre3.3 cfg-branch is based on.</dd>
+  <a href="projects/cfg.html">rtlopt-branch</a></dt>
+  <dd>This branch is the successor to the cfg-branch, with the
+  exception that it is based on GCC pre-3.4.  The purpose of the branch
+  is to develop and test infrastructure for CFG based code improving
+  transformations on RTL.</dd>
 
   <dt><a href="projects/cxx-reflection/">cxx-reflection-branch</a></dt>
   <dd>Part of the work on providing support for compile time
@@ -280,6 +248,33 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>mips-3_4-rewrite-branch</dt>
   <dd>This branch has been merged into the mainline.</dd>
+
+  <dt>dfa-branch</dt>
+  <dd>This branch has been merged into the mainline.</dd>
+
+  <dt>tree-ssa-cfg-branch</dt>
+  <dd>This branch has been merged into the tree-ssa-20020619-branch.</dd>
+  
+  <dt>faster-compiler-branch</dt> 
+  <dd>This was a temporary branch for compiler speedups for GCC 3.4.
+  See <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
+  thread</a> for discussion of possible work still to be done in this
+  area.  The branch is unmaintained at present.</dd>
+
+  <dt>gomp-01-branch</dt> 
+  <dd>This branch was created to allow the
+  <a href="http://savannah.nongnu.org/projects/gomp/">GOMP</a>
+  project to implement <a href="http://www.openmp.org/">OpenMP</a>
+  support in GCC.  It has since been found that a new C parser is
+  necessary before OpenMP support can be easily implemented.  Thus,
+  the branch is currently unmaintained.</dd>
+
+  <dt>cfg-branch</dt>
+  <dd>This branch was created to develop and test infrastructure
+  for easier writing of new RTL based optimizations.  The branch
+  was based on GCC pre-3.3 and has been partially merged into the
+  mainline for GCC 3.4.  It is now closed, and work continues on
+  the rtlopt-branch.</dd>
 
 </dl>
 
