Mark obsolete targets for 3.4.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -485,15 +485,50 @@
   been declared obsolete:</p>
 
   <ul>
-    <li></li>
+    <li>Mitsubishi D30V, <code>d30v-*</code></li>
+    <li>AT&T DSP1600 and DSP1610, <code>dsp16xx-*</code></li>
+    <li>Intel 80960, <code>i960</code></li>
   </ul>
 
   <p>Also, some individual systems have been obsoleted:</p>
 
   <ul>
-    <li>
+    <li>IBM ESA/390
       <ul>
-	<li>target <code>target-triple</code></li>
+        <li>"Bigfoot" port, <code>i370-*</code>.  (The other port,
+            <code>s390-*</code>, is actively maintained and
+            supported.)</li>
+      </ul></li>
+    <li>Intel 386 family
+      <ul>
+	<li>MOSS, <code>i?86-moss-msdos</code> and
+            <code>i?86-*-moss*</code></li>
+	<li>NCR 3000 running System V r.4, <code>i?86-ncr-sysv4*</code></li>
+	<li>FreeBSD with a.out object format, <code>i?86-*-freebsd*aout*</code>
+            and <code>i?86-*-freebsd2*</code></li>
+	<li>Linux with a.out object format, <code>i?86-linux*aout*</code></li>
+	<li>Linux with libc5, a.k.a. glibc1, <code>i?86-linux*libc1*</code></li>
+	<li>Interix versions before Interix 3, <code>i?86-*-interix</code></li>
+        <li>Mach microkernel, <code>i?86-mach*</code></li>
+        <li>SCO UnixWare with UDK, <code>i?86-*-udk*</code></li>
+        <li>Generic System V releases 1, 2, and 3, 
+            <code>i?86-*-sysv[123]*</code></li>
+        <li>VSTa microkernel, <code>i386-*-vsta</code></li>
+      </ul></li>
+    <li>Motorola M68000 family
+      <ul>
+	<li>HPUX, <code>m68k-hp-hpux*</code> and
+            <code>m68000-hp-hpux*</code></li>
+	<li>NetBSD with a.out object format (before NetBSD 1.4),
+            <code>m68k-*-*-netbsd*</code> except
+            <code>m68k-*-*-netbsdelf*</code></li>
+	<li>Generic System V r.4, <code>m68k-*-sysv4*</code></li>
+      </ul></li>
+    <li>VAX
+      <ul>
+	<li>Generic VAX, <code>vax-*-*</code> (This is generic VAX only;
+            we have not obsoleted any VAX triples for specific operating
+            systems.)<li>
       </ul></li>
   </ul>
 
