Fix endianness entry for (C).

--- a/htdocs/gcc-3.4/mips-abi.html
+++ b/htdocs/gcc-3.4/mips-abi.html
@@ -151,7 +151,7 @@ void f (struct s x);</pre>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>either</td>
+    <td>big</td>
   </tr>
 
   <tr valign="top">
