--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -486,7 +486,7 @@
 
   <ul>
     <li>Mitsubishi D30V, <code>d30v-*</code></li>
-    <li>AT&T DSP1600 and DSP1610, <code>dsp16xx-*</code></li>
+    <li>AT&amp;T DSP1600 and DSP1610, <code>dsp16xx-*</code></li>
     <li>Intel 80960, <code>i960</code></li>
   </ul>
 
