Fix another markup problem.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -528,7 +528,7 @@
       <ul>
 	<li>Generic VAX, <code>vax-*-*</code> (This is generic VAX only;
             we have not obsoleted any VAX triples for specific operating
-            systems.)<li>
+            systems.)</li>
       </ul></li>
   </ul>
 
