Remove target="_top" from links.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -113,7 +113,7 @@ close we think that we are to a fully functioning compiler.</dd>
 
 <dt><b>May 31, 2003</b></dt>
 <dd>The first Annual
-<a href="http://www.gccsummit.org/" target="_top">GCC Developers Summit</a>
+<a href="http://www.gccsummit.org/">GCC Developers Summit</a>
 was held in Ottawa, Canada from May 25-27, 2003.  At the summit, G95 developer
 Paul Brook presented a report on the current status of Fortran 95 support in
 GCC.  The decision was made that G95 should soon be adopted in the tree-ssa
@@ -169,7 +169,7 @@ soon...</dd>
 <dt><b>January 29, 2003</b></dt>
 <dd>Paul has uploaded a new statically linked executable.  It is available
 from our SourceForge <a
-href="http://sourceforge.net/projects/gcc-g95/" target="_top">
+href="http://sourceforge.net/projects/gcc-g95/">
 Project page</a><br />
 This executable has generated code for 5600 out of 6100 test cases.  The
 generated code has not been validated, though.  Also, printing reals has not
