* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-12-03.
+2003-12-06.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -40,9 +40,23 @@ differences are currently required.</p>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.SliderTest</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Container</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.MenuComponent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MenuComponent.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.MenuItem</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MenuItem.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.TextComponent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.TextComponent.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.image.ImagingOpException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.image.ImagingOpException.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.image.PixelGrabber</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.BeanDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.BeanDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.EventSetDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.EventSetDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.FeatureDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.FeatureDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.IndexedPropertyDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.IndexedPropertyDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.Introspector</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.Introspector.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.MethodDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.MethodDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.PropertyDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.PropertyDescriptor.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.SimpleBeanInfo</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.SimpleBeanInfo.diff">Diff</a></td> </tr>
+<tr> <td>java.beans.beancontext.BeanContextServicesSupport</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.beans.beancontext.BeanContextServicesSupport.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.io.FilePermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.FilePermission.diff">Diff</a></td> </tr>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
@@ -74,6 +88,7 @@ differences are currently required.</p>
 <tr> <td>java.lang.reflect.Field</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.reflect.Method</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.reflect.Modifier</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
+<tr> <td>java.net.DatagramPacket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.DatagramPacket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -104,6 +119,30 @@ differences are currently required.</p>
 <tr> <td>java.util.zip.OutputWindow</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.zip.PendingBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.zip.StreamManipulator</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>javax.naming.directory.Attribute</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.directory.Attribute.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.directory.Attributes</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.directory.Attributes.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.directory.DirContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.directory.DirContext.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.directory.InitialDirContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.directory.InitialDirContext.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.directory.SearchResult</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.directory.SearchResult.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.event.EventContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.event.EventContext.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.event.NamingEvent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.event.NamingEvent.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.event.NamingExceptionEvent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.event.NamingExceptionEvent.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.ControlFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.ControlFactory.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.ExtendedRequest</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.ExtendedRequest.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.HasControls</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.HasControls.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.InitialLdapContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.InitialLdapContext.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.LdapContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.LdapContext.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.LdapReferralException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.LdapReferralException.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.UnsolicitedNotification</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.UnsolicitedNotification.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.ldap.UnsolicitedNotificationListener</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.ldap.UnsolicitedNotificationListener.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.DirObjectFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.DirObjectFactory.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.DirStateFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.DirStateFactory.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.DirectoryManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.DirectoryManager.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.NamingManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.NamingManager.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.ObjectFactoryBuilder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.ObjectFactoryBuilder.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.ResolveResult</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.ResolveResult.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.Resolver</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.Resolver.diff">Diff</a></td> </tr>
+<tr> <td>javax.naming.spi.StateFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.StateFactory.diff">Diff</a></td> </tr>
 <tr> <td>javax.rmi.BAD_OPERATION</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
